<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xparo_ros</name>
  <version>1.0.0</version>
  <description>XPARO for ros2 remote teleoperation and project team management</description>
  <maintainer email="jangidpankaj2580@gmail.com">lazyxcientist</maintainer>
  <license>Apache License, Version 2.0</license>
  <author email="jangidpankaj2580@gmail.com">lazyxcientist</author>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
